backhomesafe: public: rebrand to leavehomesad
* i like it this way. also helps specify we're a fork

Signed-off-by: Wiley Lau <henloboii@protonmail.ch>

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta name="description" content="安心回家" />
+  <meta name="description" content="傷心出行" />
 
   <link rel="icon" href="favicon.ico" />
   <link rel="apple-touch-icon" href="icon-192x192.png" />
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>安心回家</title>
+  <title>傷心出行</title>
 </head>
 
 <body>
